--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram WebApp Example</title>
-    <script>
-        function getUserInfo() {
-            if (window.Telegram.WebApp) {
-                let userData = window.Telegram.WebApp.initDataUnsafe;
-                console.log(userData); // Yeh console me sari details dega
 
-                if (userData && userData.user) {
-                    let chatId = userData.user.id; // Yeh user ka unique ID hai
-                    document.getElementById("user-id").innerText = "Your Chat ID: " + chatId;
-                } else {
-                    document.getElementById("user-id").innerText = "User data not found!";
-                }
+    <script>
+    function getUserInfo() {
+        if (window.Telegram.WebApp) {
+            window.Telegram.WebApp.ready();  // API ko initialize karo
+            let userData = window.Telegram.WebApp.initDataUnsafe;
+            alert(userData); // Yeh console me sari details dega
+
+            if (userData && userData.user) {
+                let chatId = userData.user.id; // Yeh user ka unique ID hai
+                document.getElementById("user-id").innerText = "Your Chat ID: " + chatId;
+            } else {
+                document.getElementById("user-id").innerText = "User data not found!";
             }
+        } else {
+            document.getElementById("user-id").innerText = "Telegram WebApp API not found!";
         }
+    }
     </script>
+    
 </head>
 <body onload="getUserInfo()">
     <h1>Welcome to Telegram Web App</h1>
