--- a/index.html
+++ b/index.html
@@ -3,34 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram WebApp Debug</title>
+    <title>Telegram WebApp Debugger</title>
     <script>
-    function getUserInfo() {
-        let outputDiv = document.getElementById("output");
+        document.addEventListener("DOMContentLoaded", function () {
+            let outputDiv = document.getElementById("output");
 
-        if (window.Telegram && window.Telegram.WebApp) {
-            window.Telegram.WebApp.ready();
-            let userData = window.Telegram.WebApp.initDataUnsafe;
+            // Check if Telegram WebApp API is available
+            if (window.Telegram && window.Telegram.WebApp) {
+                let tg = window.Telegram.WebApp;
 
-            outputDiv.innerHTML = "<b>Telegram WebApp API Loaded!</b><br><br>";
-            outputDiv.innerHTML += "<b>Full Data:</b> " + JSON.stringify(userData, null, 2) + "<br>";
+                // Initialize API
+                tg.expand(); // Fullscreen mode
+                tg.ready();  // Mark WebApp as ready
 
-            if (userData && userData.user) {
-                outputDiv.innerHTML += "<b>User ID:</b> " + userData.user.id + "<br>";
-                outputDiv.innerHTML += "<b>Username:</b> @" + (userData.user.username || "Not Set") + "<br>";
+                // Fetch User Data
+                let userData = tg.initDataUnsafe;
+
+                // Display Debug Info
+                let debugText = "<b>✅ Telegram WebApp API Loaded!</b><br><br>";
+                debugText += "<b>Full Data:</b><br><pre>" + JSON.stringify(userData, null, 2) + "</pre><br>";
+
+                if (userData && userData.user) {
+                    debugText += "<b>👤 User ID:</b> " + userData.user.id + "<br>";
+                    debugText += "<b>🔤 Username:</b> @" + (userData.user.username || "Not Set") + "<br>";
+                    debugText += "<b>📝 First Name:</b> " + userData.user.first_name + "<br>";
+                    debugText += "<b>📝 Last Name:</b> " + (userData.user.last_name || "Not Set") + "<br>";
+                } else {
+                    debugText += "<b>❌ User data not received!</b><br>";
+                }
+
+                outputDiv.innerHTML = debugText;
             } else {
-                outputDiv.innerHTML += "<b>❌ User data not received!</b><br>";
+                outputDiv.innerHTML = "<b>❌ Telegram WebApp API Not Loaded!<br>Try opening from a bot button.</b>";
             }
-        } else {
-            outputDiv.innerHTML = "<b>❌ Telegram WebApp API Not Loaded!<br>Try opening from a bot button.</b>";
-        }
-    }
-        getUserInfo();
-</script>
+        });
+    </script>
 </head>
-<body onload="getUserInfo()">
+<body>
     <h1>📢 Telegram WebApp Debugger</h1>
-    <p id="output" style="white-space: pre-line; font-family: monospace; background: #f5f5f5; padding: 10px; border-radius: 5px;">
+    <p id="output" style="white-space: pre-wrap; font-family: monospace; background: #f5f5f5; padding: 10px; border-radius: 5px;">
         Fetching user data...
     </p>
 </body>
