--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
             // Check if Telegram WebApp API is available
             if (window.Telegram && window.Telegram.WebApp) {
                 let tg = window.Telegram.WebApp;
+                tg.ready();  // Initialize WebApp
 
-                // Initialize API
-                tg.expand(); // Fullscreen mode
-                tg.ready();  // Mark WebApp as ready
-
-                // Fetch User Data
+                // Fetch User Data from Telegram WebApp API
                 let userData = tg.initDataUnsafe;
 
                 // Display Debug Info
                 let debugText = "<b>✅ Telegram WebApp API Loaded!</b><br><br>";
                 debugText += "<b>Full Data:</b><br><pre>" + JSON.stringify(userData, null, 2) + "</pre><br>";
 
+                // Fetch User ID and other info
                 if (userData && userData.user) {
                     debugText += "<b>👤 User ID:</b> " + userData.user.id + "<br>";
                     debugText += "<b>🔤 Username:</b> @" + (userData.user.username || "Not Set") + "<br>";
@@ -34,7 +32,7 @@
 
                 outputDiv.innerHTML = debugText;
             } else {
-                outputDiv.innerHTML = "<b>❌ Telegram WebApp API Not Loaded!<br>Try opening from a bot button.</b>";
+                outputDiv.innerHTML = "<b>❌😔 Telegram WebApp API Not Loaded!<br>Try opening from a bot button.</b>";
             }
         });
     </script>
@@ -44,5 +42,38 @@
     <p id="output" style="white-space: pre-wrap; font-family: monospace; background: #f5f5f5; padding: 10px; border-radius: 5px;">
         Fetching user data...
     </p>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let outputDiv = document.getElementById("output");
+
+            // Check if Telegram WebApp API is available
+            if (window.Telegram && window.Telegram.WebApp) {
+                let tg = window.Telegram.WebApp;
+                tg.ready();  // Initialize WebApp
+
+                // Fetch User Data from Telegram WebApp API
+                let userData = tg.initDataUnsafe;
+
+                // Display Debug Info
+                let debugText = "<b>✅ Telegram WebApp API Loaded!</b><br><br>";
+                debugText += "<b>Full Data:</b><br><pre>" + JSON.stringify(userData, null, 2) + "</pre><br>";
+
+                // Fetch User ID and other info
+                if (userData && userData.user) {
+                    debugText += "<b>👤 User ID:</b> " + userData.user.id + "<br>";
+                    debugText += "<b>🔤 Username:</b> @" + (userData.user.username || "Not Set") + "<br>";
+                    debugText += "<b>📝 First Name:</b> " + userData.user.first_name + "<br>";
+                    debugText += "<b>📝 Last Name:</b> " + (userData.user.last_name || "Not Set") + "<br>";
+                } else {
+                    debugText += "<b>❌ User data not received!</b><br>";
+                }
+
+                outputDiv.innerHTML = debugText;
+            } else {
+                outputDiv.innerHTML = "<b>❌😔 Telegram WebApp API Not Loaded!<br>Try opening from a bot button.</b>";
+            }
+        });
+    </script>
 </body>
 </html>
