--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 
         outputDiv.innerHTML += environmentInfo;
     });
+
+        alert(window.Telegram.WebApp.initDataUnsafe);
 </script>
 </body>
 </html>
