--- a/index.html
+++ b/index.html
@@ -3,66 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram WebApp</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            padding: 20px;
-        }
-        #output {
-            background: white;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-            font-size: 18px;
-        }
-    </style>
+    <title>Telegram Login</title>
 </head>
 <body>
 
-    <h2>📢 Telegram WebApp Debugger</h2>
-    <div id="output">Fetching user data...</div>
+    <h2>Login with Telegram</h2>
+    
+    <!-- Telegram Login Widget -->
+    <script async src="https://telegram.org/js/telegram-widget.js?7"
+        data-telegram-login="YourBotUsername"
+        data-size="large"
+        data-userpic="true"
+        data-request-access="write"
+        onAuth="onTelegramAuth(user)"></script>
+
+    <!-- User Info Will Appear Here -->
+    <div id="user-info" style="display: none;">
+        <h3>Welcome, <span id="name"></span>!</h3>
+        <p><strong>Telegram ID:</strong> <span id="id"></span></p>
+        <p><strong>Username:</strong> @<span id="username"></span></p>
+        <img id="profile-pic" src="" alt="Profile Picture" width="100">
+        <button onclick="logout()">Logout</button>
+    </div>
 
     <script>
-        function getQueryParams() {
-            let queryString = window.location.hash.substring(1); // Remove `#`
-            let params = new URLSearchParams(queryString);
-            return Object.fromEntries(params.entries());
+        function onTelegramAuth(user) {
+            // Save user data in localStorage
+            localStorage.setItem("telegramUser", JSON.stringify(user));
+            showUserInfo(user);
         }
 
-        function parseTelegramData() {
-            let outputDiv = document.getElementById("output");
-            let params = getQueryParams();
+        function showUserInfo(user) {
+            document.getElementById("name").textContent = user.first_name;
+            document.getElementById("id").textContent = user.id;
+            document.getElementById("username").textContent = user.username || "No Username";
+            document.getElementById("profile-pic").src = user.photo_url || "";
 
-            if (!params.tgWebAppData) {
-                outputDiv.innerHTML = "<b>❌ No Telegram data found in URL.</b>";
-                return;
-            }
-
-            try {
-                let rawData = decodeURIComponent(params.tgWebAppData);
-                let dataParams = new URLSearchParams(rawData);
-                let userData = JSON.parse(dataParams.get("user"));
-
-                outputDiv.innerHTML = `
-                    <b>✅ Telegram WebApp Data Found!</b><br><br>
-                    <b>👤 User ID:</b> ${userData.id} <br>
-                    <b>🔤 Username:</b> @${userData.username || "Not Set"} <br>
-                    <b>📝 First Name:</b> ${userData.first_name} <br>
-                    <b>📝 Last Name:</b> ${userData.last_name || "Not Set"} <br>
-                    <b>🌐 Language:</b> ${userData.language_code} <br>
-                    <b>🖼 Profile Photo:</b> <br>
-                    <img src="${userData.photo_url}" width="100">
-                `;
-            } catch (error) {
-                outputDiv.innerHTML = `<b>⚠️ Error parsing data:</b> ${error.message}`;
-            }
+            document.getElementById("user-info").style.display = "block";
         }
 
-        document.addEventListener("DOMContentLoaded", parseTelegramData);
+        function logout() {
+            localStorage.removeItem("telegramUser");
+            document.getElementById("user-info").style.display = "none";
+        }
+
+        // Check if user is already logged in
+        window.onload = function() {
+            let savedUser = localStorage.getItem("telegramUser");
+            if (savedUser) {
+                showUserInfo(JSON.parse(savedUser));
+            }
+        };
     </script>
 
 </body>
