--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <!-- Telegram Login Widget -->
     <script async src="https://telegram.org/js/telegram-widget.js?7"
-        data-telegram-login="YourBotUsername"
+        data-telegram-login="Uvjvjv_bot"
         data-size="large"
         data-userpic="true"
         data-request-access="write"
