--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram User Info</title>
+    <title>Telegram Login Demo</title>
 </head>
 <body>
+    <h2>Login with Telegram</h2>
 
-    <h2>Get Telegram User Info</h2>
-    
+    <!-- Telegram Login Widget -->
     <script async src="https://telegram.org/js/telegram-widget.js?7"
         data-telegram-login="Uvjvjv_bot"
         data-size="large"
         data-userpic="true"
         data-request-access="write"
-        onAuth="getUserData(user)"></script>
+        data-auth-url="https://abrarhussainbeigh.github.io/ACCESS-ALL-DATA/">
+    </script>
 
     <div id="user-info" style="display: none;">
         <h3>Welcome, <span id="name"></span>!</h3>
         <p><strong>Telegram ID:</strong> <span id="id"></span></p>
+        <p><strong>Username:</strong> <span id="username"></span></p>
         <img id="profile-pic" src="" alt="Profile Picture" width="100">
     </div>
 
     <script>
-        function getUserData(user) {
-            document.getElementById("name").textContent = user.first_name;
-            document.getElementById("id").textContent = user.id;
-            document.getElementById("profile-pic").src = user.photo_url || "";
+        function getQueryParams() {
+            const params = new URLSearchParams(window.location.search);
+            let data = {};
+            for (let pair of params.entries()) {
+                data[pair[0]] = pair[1];
+            }
+            return data;
+        }
+
+        const userData = getQueryParams();
+        if (userData && userData.id) {
+            document.getElementById("name").textContent = userData.first_name || "User";
+            document.getElementById("id").textContent = userData.id;
+            document.getElementById("username").textContent = userData.username ? "@" + userData.username : "N/A";
+            if (userData.photo_url) {
+                document.getElementById("profile-pic").src = userData.photo_url;
+            }
             document.getElementById("user-info").style.display = "block";
         }
     </script>
-
 </body>
 </html>
